--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.2.1",
     "i": "^0.3.6",
     "node.js": "0.0.0",
     "npm": "^6.7.0",
+    "popper.js": "^1.14.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
