--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "babel-preset-react-app": "^7.0.0",
     "bootstrap": "^4.2.1",
     "i": "^0.3.6",
+    "jquery": "^3.3.1",
     "node.js": "0.0.0",
     "npm": "^6.7.0",
     "popper.js": "^1.14.7",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
