--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "babel-preset-react-app": "^7.0.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^3.4.1",
     "braintree-web": "^3.42.0",
     "express": "^4.16.4",
     "i": "^0.3.6",
@@ -18,15 +17,17 @@
     "npm": "^6.7.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.8.1",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "react-stripe-elements": "^2.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "stripe": "^6.23.1"
+    "stripe": "^6.25.1"
   },
   "scripts": {
     "start": "react-scripts start",
