--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-stripe-elements": "^2.0.3",
+    "react-styled-flexboxgrid": "^3.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "stripe": "^6.25.1"
+    "stripe": "^6.25.1",
+    "styled-components": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +45,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
