--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.3.1",
     "node.js": "0.0.0",
     "npm": "^6.7.0",
+    "philippines": "^1.0.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
