--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.8.1",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
