--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "philippines": "^1.0.0",
     "popper.js": "^1.14.7",
     "react": "^16.8.1",
-    "react-bootstrap": "^1.0.0-beta.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.8.1",
     "react-paypal-express-checkout": "^1.0.5",
