--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^3.4.1",
     "braintree-web": "^3.42.0",
     "express": "^4.16.4",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "node.js": "0.0.0",
     "npm": "^6.7.0",
     "philippines": "^1.0.0",
